[package]
name = "stackoverflow_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.73"
axum = "0.6.20"
axum-macros = "0.3.8"
dotenvy = "0.15.7"
http = "0.2.9"
hyper = "0.14.27"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.181", features = ["derive", "rc"] }
serde_json = "1.0.104"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "time", "uuid", "macros"]}
thiserror = "1.0.47"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs", "cors"] }

[dev-dependencies]
httpc-test = "0.1.5"

[build]
rustc-wrapper = "/home/dylandoesprogramming/.cargo/bin/sccache"
